--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -1,6 +1,9 @@
+:root {
+    font-size: 20px;
+}
+
 body {
     font-family: "Arial","Meiryo", sans-serif;
-    font-size: 20px;
     text-align: center;
 }
 
@@ -22,6 +25,6 @@ h1 {
     border-bottom: solid 3px rgb(115, 115, 114)
 }
 
-#basic {
+#basic > p {
     font-weight: bold;
 }
