--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -18,7 +18,7 @@ body {
 h1 {
     font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 2rem;
+    font-size: 2rem;
     font-style: normal;
     letter-spacing: 1.2em;
     text-shadow: 2px 2px 2px gray;
